--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^5.0.3",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-submenu": "^3.0.3",
