--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
+    "react-bootstrap": "^2.7.4",
     "react-bootstrap-submenu": "^3.0.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
