--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aws-amplify": "^5.0.3",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-submenu": "^3.0.3",
