--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-submenu": "^3.0.3",
