--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "aws-amplify": "^5.0.3",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-submenu": "^3.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-moment": "^1.1.3",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
