--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-moment": "^1.1.3",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4"
   },
